Fix footer on mobile

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -12,9 +12,6 @@
     align-items: center;
 }
 
-.footer_content__text {
-}
-
 .footer_content__menu {
     display: flex;
     flex-direction: row;
